[workspace]
members = [
  "crates/bin/editor",
  "crates/bin/tests",
  "crates/bin/tutorial",
  "crates/lib/renderer",
]

exclude = ["benches"]

[workspace.dependencies]
gpu-allocator = "0.20.0"
async-trait = "0.1.58"
thiserror = "1.0.37"
log = "0.4.17"
lock_api = "0.4.9"
parking_lot = "0.12.1"
once_cell = "1.16.0"
static_cell = "1.0.0"
raw-window-handle = "0.5.0"
winit = "0.27.5"
glam = "0.22.0"
env_logger = "0.10"
wgpu = "0.15"

[profile.release]
debug = 1