[project]
name = "tdrengine-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpu-allocator = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
lock_api = { workspace = true }
raw-window-handle = { workspace = true }
winit = { workspace = true }
glam = {workspace = true }